# TerminalChatApplication

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/network/client/: client.hpp
include/network/server/: server.hpp
main/: main.cpp
network/client/: Client.cpp
network/server/: Server.cpp
